Fix: challenge_achievement 테이블 분리, challenge enum에서 테이블로 변경 및 해당 테이블 변경으로 인한 수정 (#104)
* Fix: 챌린지 관련 테이블 alter and crate sql

* Fix: 챌린지 데이터 테이블 화

- 챌린지 관련 dto 수정
- 챌린지 조회 추가

* Fix: 챌린지 데이터 insert

* Fix: challenge_achievement 테이블 분리로 인한 수정

* Test: 챌린지 관련 테이블 변경으로 테스트 수정

* Rename: findAllChallenges의 인자 값 네이밍을 변경합니다.

* Fix: table 코멘트 삭제

* Fix: challenge data insert sql 삭제

* Rename: dto접미사 삭제

* Rename: ChallengeAchievementRecord 개별 클래스로 구성

- domain.challenge.achievement.dto 패키지에 ChallengeAchievementRecord, ChallengeAchievement PercentageValues로 구성

* Fix: 어제의 러닝 기록에 따라 Challenge 리스트 조회 분리

- 기존의 findAllChallenges(boolean) 을 findAllChallenges(), findAllIsNotDefeatYesterday()로 분리
- 서비스에서 어제의 러닝 기록에 따라 findAllChallenges 또는 findAllIsNotDefeatYesterday 호출

* Fix: ChallengeData 도메인 분리

* Fix: findChallengeWithConditionsBy 조회를 join -> multiset사용으로 변경

* Fix: pr 리뷰 사항 수정

- ChallengeAchievementRecord의 hasPercentage 삭제
- JpaChallengeAchievementRepository 오타 수정(aLong -> runningId)
- calPercentage 삭제

* Rename: pr 리뷰사항(챌린지 성취 관련 dto 패키지 변경)

* Fix: warring 제거

* Comment: 챌린지 성취 저장, 조회에 관한 코멘트(TODO로 표시)